--- a/dss_monocle-gateway/Dockerfile
+++ b/dss_monocle-gateway/Dockerfile
@@ -79,15 +79,15 @@ LABEL \
     io.hass.arch="${BUILD_ARCH}" \
     io.hass.type="addon" \
     io.hass.version=${BUILD_VERSION} \
-    maintainer="https://github.com/sdesalve" \
+    maintainer="https://github.com/kryzon" \
     org.opencontainers.image.title="Addon Monocle Gateway for ${BUILD_ARCH}" \
     org.opencontainers.image.description="Monocle Gateway for Home Assistant" \
     org.opencontainers.image.vendor="SDeSalve.it" \
     org.opencontainers.image.authors="SDeSalve <me@sdesalve.it>" \
     org.opencontainers.image.licenses="CC Attribution-NonCommercial 4.0 International" \
     org.opencontainers.image.url="https://sdesalve.it" \
-    org.opencontainers.image.source="https://github.com/sdesalve/hassio-addons/tree/master/dss_monocle-gateway" \
-    org.opencontainers.image.documentation="https://github.com/sdesalve/hassio-addons/tree/master/dss_monocle-gateway/README.md" \
+    org.opencontainers.image.source="https://github.com/kryzon/hassio-addons/tree/master/dss_monocle-gateway" \
+    org.opencontainers.image.documentation="https://github.com/kryzon/hassio-addons/tree/master/dss_monocle-gateway/README.md" \
     org.opencontainers.image.created=${BUILD_DATE} \
     org.opencontainers.image.revision=${BUILD_REF} \
     org.opencontainers.image.version=${BUILD_VERSION}    
