--- a/dss_monocle-gateway/Dockerfile
+++ b/dss_monocle-gateway/Dockerfile
@@ -1,4 +1,5 @@
-ARG BUILD_FROM=ghcr.io/hassio-addons/base:12.2.6
+#ARG BUILD_FROM=ghcr.io/hassio-addons/base:12.2.6
+ARG BUILD_FROM=hcr.io/hassio-addons/base:14.1.0
 # hadolint ignore=DL3006
 FROM ${BUILD_FROM}
 
